--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>React Typescript Tailwind Parcel Boilerplate</title>
 </head>
 
 <body>
     <noscript>You need to enable Javascript to run this application.</noscript>
     <div id="root">
-       <h1>NOt Rendered</h1>
+       <h1>NOT - Rendered</h1>
     </div>
     <script src="../src/index.tsx"></script>
 </body>
